front-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: front
  labels:
    run: front
spec:
  ports:
    - name: http-front 
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
      run: front
  type: LoadBalancer
  loadBalancerSourceRanges:
  - 0.0.0.0/0
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: front
    spec:
      containers:
      - name: front
        image: otomato/oto-front:tracing4
        ports:
        - containerPort: 3000
