orders-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    run: orders
spec:
  ports:
    # the port that this service should serve on
    - name: http-orders 
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
      run: orders
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: orders
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: orders
    spec:
      containers:
      - name: orders
        image: otomato/oto-orders:9
        ports:
        - containerPort: 8080
