products-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: products
  labels:
    run: products
spec:
  ports:
    - name: http-prod
      port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
      run: products
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: products
spec:
  replicas: 2
  template:
    metadata:
      labels:
        run: products
    spec:
      containers:
      - name: products
        image: otomato/oto-products:2
        ports:
        - containerPort: 5000
